spring-rhoar-intro/src/main/fabric8/template.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: null
    labels:
      app: fruits
      group: com.example
      provider: fabric8
      version: 15-SNAPSHOT
    name: fruits
  spec:
    host: fruits-dev.2886795293-80-kitek02.environments.katacoda.com
    port:
      targetPort: 8080
    to:
      kind: Service
      name: fruits
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2020-02-29T10:35:53Z
        status: "True"
        type: Admitted
      host: fruits-dev.2886795293-80-kitek02.environments.katacoda.com
      routerName: router
      wildcardPolicy: None
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      fabric8.io/git-branch: master
      fabric8.io/git-commit: 56e68e302e6f9965d42e76963b78482b2bc5e1cd
      fabric8.io/iconUrl: img/icons/spring-boot.svg
      prometheus.io/port: "9779"
      prometheus.io/scrape: "true"
    creationTimestamp: null
    labels:
      app: fruits
      expose: "true"
      group: com.example
      provider: fabric8
      version: 15-SNAPSHOT
    name: fruits
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: fruits
      group: com.example
      provider: fabric8
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: my-database
    name: my-database
  spec:
    ports:
    - name: 5432-tcp
      port: 5432
      protocol: TCP
      targetPort: 5432
    selector:
      app: my-database
      deploymentconfig: my-database
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      fabric8.io/git-branch: master
      fabric8.io/git-commit: 56e68e302e6f9965d42e76963b78482b2bc5e1cd
      fabric8.io/iconUrl: img/icons/spring-boot.svg
      fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=fruits&var-version=15-SNAPSHOT
    creationTimestamp: null
    generation: 1
    labels:
      app: fruits
      group: com.example
      provider: fabric8
      version: 15-SNAPSHOT
    name: fruits
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      app: fruits
      group: com.example
      provider: fabric8
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 3600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          fabric8.io/git-branch: master
          fabric8.io/git-commit: 56e68e302e6f9965d42e76963b78482b2bc5e1cd
          fabric8.io/iconUrl: img/icons/spring-boot.svg
          fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=fruits&var-version=15-SNAPSHOT
        creationTimestamp: null
        labels:
          app: fruits
          group: com.example
          provider: fabric8
          version: 15-SNAPSHOT
      spec:
        containers:
        - env:
          - name: DB_USERNAME
            valueFrom:
              secretKeyRef:
                key: user
                name: my-database-secret
          - name: DB_PASSWORD
            valueFrom:
              secretKeyRef:
                key: password
                name: my-database-secret
          - name: JAVA_OPTIONS
            value: -Dspring.profiles.active=openshift
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
          image: 172.30.141.157:5000/dev/fruits@sha256:3cfa9f17421ad22055908fccd901f3aa406d2f969d45c7115aad91871a2b9110
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: spring-boot
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          securityContext:
            privileged: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - spring-boot
        from:
          kind: ImageStreamTag
          name: fruits:latest
          namespace: dev
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    generation: 1
    labels:
      app: my-database
    name: my-database
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: my-database
      deploymentconfig: my-database
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: my-database
          deploymentconfig: my-database
      spec:
        containers:
        - env:
          - name: POSTGRESQL_DATABASE
            value: my_data
          - name: POSTGRESQL_PASSWORD
            value: secret
          - name: POSTGRESQL_USER
            value: luke
          image: openshift/postgresql-92-centos7@sha256:dbd4b6fef477e49bff9703ee70d20a2c48f68023562ebecc264d0b87a7fa270e
          imagePullPolicy: Always
          name: my-database
          ports:
          - containerPort: 5432
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/pgsql/data
            name: my-database-volume-1
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir: {}
          name: my-database-volume-1
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - my-database
        from:
          kind: ImageStreamTag
          name: my-database:latest
          namespace: dev
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: BuildConfig
  metadata:
    creationTimestamp: null
    labels:
      app: fruits
      group: com.example
      provider: fabric8
      version: 15-SNAPSHOT
    name: fruits-s2i
  spec:
    failedBuildsHistoryLimit: 5
    nodeSelector: {}
    output:
      to:
        kind: ImageStreamTag
        name: fruits:latest
    postCommit: {}
    resources: {}
    runPolicy: Serial
    source:
      binary: {}
      type: Binary
    strategy:
      sourceStrategy:
        from:
          kind: DockerImage
          name: registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift:1.3
      type: Source
    successfulBuildsHistoryLimit: 5
    triggers: []
  status:
    lastVersion: 0
- apiVersion: v1
  kind: ImageStream
  metadata:
    creationTimestamp: null
    generation: 1
    labels:
      app: fruits
      group: com.example
      provider: fabric8
      version: 15-SNAPSHOT
    name: fruits
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations: null
      from:
        kind: DockerImage
        name: 172.30.141.157:5000/dev/fruits:latest
      generation: null
      importPolicy: {}
      name: latest
      referencePolicy:
        type: ""
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/image.dockerRepositoryCheck: 2020-02-29T10:32:07Z
    creationTimestamp: null
    generation: 2
    labels:
      app: my-database
    name: my-database
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: openshift/postgresql-92-centos7
      from:
        kind: DockerImage
        name: 172.30.141.157:5000/dev/my-database:latest
      generation: 2
      importPolicy: {}
      name: latest
      referencePolicy:
        type: Source
  status:
    dockerImageRepository: ""
kind: List
metadata: {}
